tests/baselines/reference/conditionalExpressionNewLine10.errors.txt
conditionalExpressionNewLine10.ts(1,9): error TS2304: Cannot find name 'a'.
conditionalExpressionNewLine10.ts(2,5): error TS2304: Cannot find name 'b'.
conditionalExpressionNewLine10.ts(3,7): error TS2304: Cannot find name 'd'.
conditionalExpressionNewLine10.ts(4,7): error TS2304: Cannot find name 'e'.
conditionalExpressionNewLine10.ts(5,5): error TS2304: Cannot find name 'c'.
conditionalExpressionNewLine10.ts(6,7): error TS2304: Cannot find name 'f'.
conditionalExpressionNewLine10.ts(7,7): error TS2304: Cannot find name 'g'.


==== conditionalExpressionNewLine10.ts (7 errors) ====
    var v = a 
            ~
!!! error TS2304: Cannot find name 'a'.
      ? b
        ~
!!! error TS2304: Cannot find name 'b'.
        ? d
          ~
!!! error TS2304: Cannot find name 'd'.
        : e
          ~
!!! error TS2304: Cannot find name 'e'.
      : c
        ~
!!! error TS2304: Cannot find name 'c'.
        ? f
          ~
!!! error TS2304: Cannot find name 'f'.
        : g;
          ~
!!! error TS2304: Cannot find name 'g'.